--- a/.github/workflows/publish-dist.yml
+++ b/.github/workflows/publish-dist.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           yarn --version
           yarn version --patch -m "chore: bump version to %s [skip ci]"
-          git push origin HEAD:main --follow-tags
+          git push origin HEAD:main
 
       # 2) Build (Passe den Befehl bei Bedarf an, z. B. Vite/Rollup)
       - name: Build
