--- a/.github/workflows/publish-dist.yml
+++ b/.github/workflows/publish-dist.yml
@@ -57,8 +57,8 @@ jobs:
       - name: Upload dist artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dist-zip
-          path: dist-zip/
+          name: dist
+          path: dist/
           if-no-files-found: error
           retention-days: 14
           
@@ -72,7 +72,7 @@ jobs:
       - name: Download Distribution
         uses: actions/download-artifact@v4
         with:
-          name: dist-zip
+          name: dist
           path: /tmp/ha-card
       
       - name: Unpack dist.zip to temp
