--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "version": "1.0.13",
   "type": "module",
   "scripts": {
+    "postinstall": "playwright install chromium",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "devDependencies": {
     "@open-wc/testing": "^4.0.0",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/web-components-vite": "^10.1.10",
+    "@vitest/browser-playwright": "^4.0.16",
     "@web/test-runner": "^0.20.2",
     "@web/test-runner-playwright": "^0.11.1",
+    "jsdom": "^27.3.0",
     "playwright": "^1.57.0",
     "storybook": "^10.1.10",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "lit": "^3.3.1"
